--- a/css/style.css
+++ b/css/style.css
@@ -218,7 +218,7 @@ header h2:before {
     text-align: center;
     float:left;
     margin-left: 29px;
-}
+  }
 .net-ras:hover {
   color: #fff;
   text-decoration: none;
@@ -226,7 +226,7 @@ header h2:before {
 /*=======================about============================*/
 .about-company {
     background: url(../img/about-bg.jpg) no-repeat left top;
-    background-size: contain;
+    background-size: cover;
     padding-bottom: 20px;
 }
 .about_text p {
@@ -408,18 +408,18 @@ header h2:before {
     font-weight: 300;
     line-height: 35px;
     text-align: center;
-}
+  }
 .map-contact a:hover{
     text-decoration: none;
     background-color: #ff9600;
     border-color: #ff9600;
-}
+  }
 /*===== question =====*/
 .question {
   padding: 53px 0 48px;
   background: url(../img/uslugi-gb.jpg) no-repeat;
   background-size: cover;
-}
+  }
 .question .container,
 .request .container {
   padding: 0 46px;
@@ -654,7 +654,7 @@ footer img {
   text-decoration: none;
 }
 .coppyright {
-  padding-top: 20px;
+  padding-top: 10px;
   color:  #ccc;
   font-size: 12px;
   font-weight: 300;
@@ -774,6 +774,9 @@ footer img {
 
 /* Large Devices, Wide Screens */
 @media only screen and (max-width : 1199px) {
+  .about-company {
+    background: #fff;
+  }
   .orangeBorder {
 	left: calc(50% - 475px);
     left: -moz-calc(50% - 475px);
@@ -893,6 +896,9 @@ footer img {
   .request .container {
     padding: 0 5px;
   }
+  .block-news {
+    width: 100%;
+  }
   .block_warner p,
   .block-preim p {
     text-align: justify;
@@ -904,3 +910,29 @@ footer img {
   }
   
 }
+
+@media only screen and (max-width : 425px) {
+  .news-date {
+    top: 130px;
+  }
+  .uslugy h2:before {
+    left: 47px;
+  }
+  .preimyshestva h2:before {
+    left: 120px;
+  }
+  .testing h2:before {
+    left: 20px;
+  }
+} 
+@media only screen and (max-width : 375px) {
+  .news-date {
+    top: 100px;
+  }
+} 
+@media only screen and (max-width : 320px) {
+  .news-date {
+    top: 85px;
+    right: 15px;
+  }
+} 
