--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ header h2:before {
     text-decoration: underline;
 }
 
-/*===== request =====*/
+/*===== request====*/
 .request {
   padding: 53px 0 48px;
   background: url(../img/forms-bg.jpg) no-repeat;
